New FrostyBoy Sandbox/src/objects/Purchase__c.object
<CustomObject>
    <description>This object captures the details of initial costs borne by Frosty Boy to purchase machines/spare parts. ‘Purchases’ object is loosely coupled with the ‘Machines’ object to identify for which machine the purchase was made. This is being kept a separate object since spare parts would be the same (unserialized), but purchases will be made frequently.</description>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine__c</fullName>
        <label>Item</label>
        <referenceTo>Machine__c</referenceTo>
        <relationshipLabel>Purchases</relationshipLabel>
        <relationshipName>Purchases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purchase_Cost__c</fullName>
        <label>Purchase Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spare_Part_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Spare Part Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spare_Parts_Remaining__c</fullName>
        <formula>Quantity__c  -  Spare_Part_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spare Parts Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchases</relationshipLabel>
        <relationshipName>Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spare Part</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Purchase</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Machine__c</columns>
        <columns>Purchase_Date__c</columns>
        <columns>Quantity__c</columns>
        <columns>Spare_Parts_Remaining__c</columns>
        <columns>Type__c</columns>
        <columns>Purchase_Cost__c</columns>
        <columns>Spare_Part_Used__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Purchase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>